--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,11 +11,11 @@
 
 @font-face {
   font-family: Robus;
-  src: url("../fonts/Robus.otf") format("opentype");
+  src: url("../../src/fonts/Robus.otf") format("opentype");
 }
 @font-face {
   font-family: Super-Rugged;
-  src: url("../fonts/Super-Rugged.ttf") format("truetype");
+  src: url("../../src/fonts/Super-Rugged.ttf") format("truetype");
 }
 
 button,
